@@ -1,5 +1,14 @@
 2008-10-01  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* binutils-all/group-4.s: New.
+	* binutils-all/strip-8.d: Likewise.
+	* binutils-all/strip-9.d: Likewise.
+
+	* binutils-all/objcopy.exp: Test objcopy on group-4.s.  Run
+	strip-8 and strip-9.
+
+2008-10-01  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* binutils-all/group-3.s: New.
 	* binutils-all/strip-6.d: Likewise.
 	* binutils-all/strip-7.d: Likewise.
